--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <header class="header">
         <div class="container">
             <img src="./images/main_logo.svg" alt="Logo of this page" width="60" height="32">
+            <button class="hamburger__menu" onsubmit="tabMenuBtn"><i class="fas fa-bars"></i></button>
             <nav class="nav">
                 <ul class="nav__list">
                     <li class="nav__item">
@@ -46,5 +47,6 @@
     <footer class="footer">
         
     </footer>
+    <script src="./js/main.js"></script>
 </body>
 </html>
